force-app/main/default/objects/UserShadow__c.object
<CustomObject>
    <description>Used to shadow changes to user object for auditing purposes</description>
    <fields>
        <fullName>Email__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Shadow Email field</description>
        <inlineHelpText>Shadow Email field</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FederationIdentifier__c</fullName>
        <description>Shadow FederationIdentifier field</description>
        <inlineHelpText>Shadow FederationIdentifier field</inlineHelpText>
        <label>FederationIdentifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shadow IsActive field</description>
        <inlineHelpText>Shadow IsActive field</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Provisioning_Action__c</fullName>
        <description>Shadow Last_Provisioning_Action__c field</description>
        <inlineHelpText>Shadow Last_Provisioning_Action__c field</inlineHelpText>
        <label>Last Provisioning Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerId__c</fullName>
        <description>Shadow ManagerId field</description>
        <inlineHelpText>Shadow ManagerId field</inlineHelpText>
        <label>ManagerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <description>Shadow Profile Name on User</description>
        <inlineHelpText>Shadow Profile Name on User</inlineHelpText>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provisioning_Request_Id__c</fullName>
        <description>Shadow Provisioning_Request_Id on User</description>
        <inlineHelpText>Shadow Provisioning_Request_Id on User</inlineHelpText>
        <label>Provisioning Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provisioning_Source__c</fullName>
        <description>Shadow Provisioning_Source__c on User</description>
        <inlineHelpText>Shadow Provisioning_Source__c on User</inlineHelpText>
        <label>Provisioning Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <description>Shadow User Role Name on user object</description>
        <inlineHelpText>Shadow User Role Name on user object</inlineHelpText>
        <label>Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Shadow Username field</description>
        <externalId>true</externalId>
        <inlineHelpText>Shadow Username field</inlineHelpText>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>User Shadow</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>FederationIdentifier__c</columns>
        <columns>IsActive__c</columns>
        <columns>Profile_Name__c</columns>
        <columns>Role_Name__c</columns>
        <columns>Provisioning_Request_Id__c</columns>
        <columns>Provisioning_Source__c</columns>
        <columns>Last_Provisioning_Action__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email__c</field>
            <operation>equals</operation>
            <value>emily.cooke@monash.edu</value>
        </filters>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Shadows</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>